# se-toolkit-lab-7

./: .env.bot.example
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  command_handlers.py
bot/services/: __init__.py  api_client.py  llm_client.py
